--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/larissabrodrigues/backend-api-nodejs-t7#readme",
   "dependencies": {
+    "args-parser": "^1.3.0",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-query-int": "^3.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.2",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
     "mongoose-paginate": "^5.0.3",
     "node-restful": "^0.2.6",
     "pm2": "^5.2.0"
